# FoxCloud

./: .gitignore  CHANGELOG.md  KEYSTORE_SETUP.md  README.en.md  README.md  pubspec.yaml  setup.dart
.github/: FUNDING.yml  release_template.md
.github/workflows/: build.yaml
android/: gradle.properties
android/app/: build.gradle.kts  local.properties  proguard-rules.pro
android/core/: build.gradle.kts
arb/: intl_en.arb  intl_ru.arb
core/: common.go  go.mod  go.sum  hub.go
lib/: application.dart  controller.dart  foxcloud_domain_guard.dart  main.dart  state.dart
lib/clash/: core.dart  interface.dart  service.dart
lib/common/: archive.dart  common.dart  constant.dart  custom_theme.dart  datetime.dart  function.dart  http.dart  launch.dart  link.dart  navigation.dart  package.dart  print.dart  render.dart  request.dart  session_log.dart  string.dart  system.dart  utils.dart  window.dart  windows.dart
lib/enum/: enum.dart
lib/l10n/: l10n.dart
lib/manager/: app_state_manager.dart  clash_manager.dart  message_manager.dart  notification_manager.dart  tray_manager.dart  window_manager.dart
lib/models/: clash_config.dart  common.dart  config.dart  profile.dart
lib/pages/: editor.dart  home.dart  scan.dart
lib/plugins/: notification.dart
lib/providers/: state.dart
lib/views/: logs.dart  (+6 more)
linux/: CMakeLists.txt
plugins/flowvy_notification/windows/: CMakeLists.txt  flowvy_notification_plugin_c_api.cpp  notification_plugin.cpp  notification_plugin.h
plugins/flowvy_notification/windows/include/flowvy_notification/: flowvy_notification_plugin_c_api.h
(+91 files in other folders)
